kube/web3.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/backends: '{"k8s-be-30964--8e93aa0bf78a1074":"HEALTHY","k8s1-8e93aa0b-default-multi-container-service2-3002-1345283f":"HEALTHY"}'
    ingress.kubernetes.io/forwarding-rule: k8s2-fr-p0sfchpb-default-web3-wkmd0z6r
    ingress.kubernetes.io/target-proxy: k8s2-tp-p0sfchpb-default-web3-wkmd0z6r
    ingress.kubernetes.io/url-map: k8s2-um-p0sfchpb-default-web3-wkmd0z6r
  creationTimestamp: "2023-01-03T02:11:04Z"
  finalizers:
  - networking.gke.io/ingress-finalizer-V2
  generation: 1
  managedFields:
  - apiVersion: networking.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:spec:
        f:rules: {}
    manager: GoogleCloudConsole
    operation: Update
    time: "2023-01-03T02:11:04Z"
  - apiVersion: networking.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:ingress.kubernetes.io/backends: {}
          f:ingress.kubernetes.io/forwarding-rule: {}
          f:ingress.kubernetes.io/target-proxy: {}
          f:ingress.kubernetes.io/url-map: {}
        f:finalizers:
          .: {}
          v:"networking.gke.io/ingress-finalizer-V2": {}
      f:status:
        f:loadBalancer:
          f:ingress: {}
    manager: glbc
    operation: Update
    subresource: status
    time: "2023-01-03T02:11:26Z"
  name: web3
  namespace: default
  resourceVersion: "20386521"
  uid: 9c3f598c-9a23-4d14-b337-476bfdc2475e
spec:
  rules:
  - host: web.cx.external
    http:
      paths:
      # - path:  /web2
      - backend: 
          service:
            name: multi-container-service2
            port:
              number: 3002
        pathType: ImplementationSpecific
      # - path:  /web
      #   backend:
      #     service:
      #       name: multi-container-service3
      #       port:
      #         number: 3001
      #   pathType: ImplementationSpecific

        
  # - host: api.cx.external 
  #   http:
  #     paths:
  #     - backend:
  #         service:
  #           name: multi-container-service3
  #           port:
  #             number: 3003
  #       pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - ip: 34.110.186.220
